--- a/W10/project.ipynb
+++ b/W10/project.ipynb
@@ -292,7 +292,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "15131916-735d-4fc5-9c08-53d371fbacad",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -907,10 +909,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5bc99b7a-4e23-442b-ab45-a8db0e16dc46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fit_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mfit_model\u001b[49m\u001b[38;5;241m.\u001b[39mtransform(test_data)\n\u001b[1;32m      2\u001b[0m results\u001b[38;5;241m.\u001b[39mshow()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fit_model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "results = fit_model.transform(test_data)\n",
     "results.show()"
@@ -1390,7 +1404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
